--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <ul>
         <li><a href="../../../anii/" target="_current">/anii</a></li>
         <li><a href="../../../cluster-project/" target="_current">/cluster-project</a></li>
-        <li><a href="../../../anii/locoedit/" target="_current">/locoedit/</a></li>
+        <li><a href="../../../anii/locoedit/" target="_current">/locoedit</a></li>
         </ul>
     <script type="text/javascript" src="/dist/script.min.js"></script>
     </body>
