--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -2,7 +2,7 @@
 <head>
     <title>Alicetrap | Animalizers</title>
 	<meta description="Alicetrap, Alice Bootstrap Landing Page" charset="utf-8"/>
-    <style rel="stylesheet" href="../assets/alicetrap.css"/>
+    <style rel="stylesheet" href="../../assets/alicetrap.css"/>
 </head>
 <body>
     <h2 style="color: white; text-align: center; margin: 20px 0 0 0; font: bold 28px 'Lucida Sans', sans-serif;">Animalizers</h2>
