--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -2,7 +2,7 @@
 <head>
     <title>Alicetrap | Animalizers</title>
 	<meta description="Alicetrap, Alice Bootstrap Landing Page" charset="utf-8"/>
-    <link rel="stylesheet" href="../../assets/alicetrap.css"/>
+    <link rel="stylesheet" href="../../assets/alicetrap.min.css"/>
 </head>
 <body>
     <h2 style="color: white; text-align: center; margin: 20px 0 0 0; font: bold 28px 'Lucida Sans', sans-serif;">Animalizers</h2>
@@ -13,7 +13,6 @@
             document.getElementById('main').innerHTML = document.getElementById(id).innerHTML}
     </script>
     <nav class="nav">
-        <div style="">
         <ul class="navinti" style="overflow: visible; display: block;">
         <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
         <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
@@ -42,5 +41,5 @@
             <p>Content Page 03</p>
         </div>
     </article>
-    <footer style=" width: 100%; height: 25px; background: rgba(255,255,255,.4); text-align: center;">[c] <a href="//codecademy.com/animalizers/">Animalizers</a> Project Codebits 2014 | <a href="//www.codecademy.com/animalizers/codebits/VIrM4W">Original</a> </footer>
+    <footer style=" width: 100%; height: 25px; background: rgba(255,255,255,.4); text-align: center;">[c] <a href="//www.codecademy.com/animalizers/">Animalizers</a> Project Codebits 2014 | <a href="//www.codecademy.com/animalizers/codebits/VIrM4W">Original</a> </footer>
 </body>
