--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -17,11 +17,11 @@
         <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
         <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
         <li onclick="changeNavigation('p03')"><a>PAGE 03</a></li>
-		<li onclick="changeNavigation('backtotop')"><a>Home</a></li>
+		<li onclick="changeNavigation('main')"><a>Home</a></li>
         </ul>
     </nav>
     <article>
-        <div class="main" id="backtotop">
+        <div class="main" id="main">
             <div class="head">Main Page</div>
             <hr>
             <p>Content Main Page</p>
