--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -13,6 +13,7 @@
             document.getElementById('main').innerHTML = document.getElementById(id).innerHTML}
     </script>
     <nav class="nav">
+		<div style="">
         <ul class="navinti" style="overflow: visible; display: block;">
         <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
         <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
