--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -10,7 +10,7 @@
     <!-- Navi -->
     <script>
         function changeNavigation(id){
-            document.getElementById('main').innerHTML = document.getElementById(id).innerHTML}
+            document.getElementById('mainpg').innerHTML = document.getElementById(id).innerHTML}
     </script>
     <nav class="nav">
 		<div style="">
@@ -18,11 +18,11 @@
         <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
         <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
         <li onclick="changeNavigation('p03')"><a>PAGE 03</a></li>
-		<li onclick="changeNavigation('main')"><a>Home</a></li>
+		<li onclick="changeNavigation('mainpg')"><a>MainPG</a></li>
         </ul>
     </nav>
     <article>
-        <div class="main" id="main">
+        <div class="main" id="mainpg">
             <div class="head">Main Page</div>
             <hr>
             <p>Content Main Page</p>
