--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -10,7 +10,7 @@
     <!-- Navi -->
     <script>
         function changeNavigation(id){
-            document.getElementById('mainpg').innerHTML = document.getElementById(id).innerHTML}
+            document.getElementById('').innerHTML = document.getElementById(id).innerHTML}
     </script>
     <nav class="nav">
 		<div style="">
@@ -18,7 +18,7 @@
         <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
         <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
         <li onclick="changeNavigation('p03')"><a>PAGE 03</a></li>
-		<li onclick="changeNavigation('mainpg')"><a>MainPG</a></li>
+		<li onclick="changeNavigation('mainpg')"><a>Main PG</a></li>
         </ul>
     </nav>
     <article>
