--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -3,45 +3,35 @@
     <title>Alicetrap | Animalizers</title>
 	<meta description="Alicetrap, Alice Bootstrap Landing Page" charset="utf-8"/>
     <link rel="stylesheet" href="../../assets/alicetrap.min.css"/>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
 </head>
 <body>
     <h2 style="color: white; text-align: center; margin: 20px 0 0 0; font: bold 28px 'Lucida Sans', sans-serif;">Animalizers</h2>
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
     <script>
-        function changeNavigation(id){
-            document.getElementById('').innerHTML = document.getElementById(id).innerHTML}
+	$('#home a[href="#profile"]').tab('show') // Select tab by name
+	$('#profile a:first').tab('show') // Select first tab
+	$('#messages a:last').tab('show') // Select last tab
+	$('#settings li:eq(2) a').tab('show') // Select third tab (0-indexed)
     </script>
     <nav class="nav">
-		<div style="">
-        <ul class="navinti" style="overflow: visible; display: block;">
-        <li onclick="changeNavigation('p01')"><a>PAGE 01</a></li>
-        <li onclick="changeNavigation('p02')"><a>PAGE 02</a></li>
-        <li onclick="changeNavigation('p03')"><a>PAGE 03</a></li>
-		<li onclick="changeNavigation('mainpg')"><a>Main PG</a></li>
-        </ul>
-    </nav>
-    <article>
-        <div class="main" id="mainpg">
-            <div class="head">Main Page</div>
-            <hr>
-            <p>Content Main Page</p>
-        </div>
-        <div id="p01" style="display:none;">
-            <div class="head">Test Page 01</div>
-            <hr>
-            <p>Content Page 01</p>
-        </div>
-        <div id="p02" style="display:none;">
-            <div class="head">Test Page 02</div>
-            <hr>
-            <p>Content Page 02</p>
-        </div>
-        <div id="p03" style="display:none;">
-            <div class="head">Test Page 03</div>
-            <hr>
-            <p>Content Page 03</p>
-        </div>
-    </article>
+		<!-- Nav tabs -->
+		<ul class="nav nav-tabs" role="tablist">
+			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+			<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+			<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+			<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+		</ul>
+	</nav>
+		<!-- Tab panes -->
+		<div class="tab-content">
+			<div role="tabpanel" class="tab-pane active" id="home">...</div>
+			<div role="tabpanel" class="tab-pane" id="profile">...</div>
+			<div role="tabpanel" class="tab-pane" id="messages">...</div>
+			<div role="tabpanel" class="tab-pane" id="settings">...</div>
+		</div>
+	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <footer style=" width: 100%; height: 25px; background: rgba(255,255,255,.4); text-align: center;">[c] <a href="//www.codecademy.com/animalizers/">Animalizers</a> Project Codebits 2014 | <a href="//www.codecademy.com/animalizers/codebits/VIrM4W">Original</a> </footer>
 </body>
