--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -16,22 +16,36 @@
 	$('#messages a:last').tab('show') // Select last tab
 	$('#settings li:eq(2) a').tab('show') // Select third tab (0-indexed)
     </script>
-    <nav class="nav">
-		<!-- Nav tabs -->
-		<ul class="nav nav-tabs" role="tablist">
-			<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-			<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-			<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-			<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
-		</ul>
-	</nav>
-		<!-- Tab panes -->
-		<div class="tab-content">
-			<div role="tabpanel" class="tab-pane active" id="home">...</div>
-			<div role="tabpanel" class="tab-pane" id="profile">...</div>
-			<div role="tabpanel" class="tab-pane" id="messages">...</div>
-			<div role="tabpanel" class="tab-pane" id="settings">...</div>
+	<!-- Nav tabs -->
+	<ul class="nav nav-tabs" role="tablist">
+		<li role="presentation" class="active"><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
+		<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
+		<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
+		<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+	</ul>
+	<!-- Tab panes -->
+	<div class="tab-content">
+		<div role="tabpanel" class="tab-pane active" id="home">
+		<div class="maincontainer">
+		mega content here
 		</div>
+		</div>
+		<div role="tabpanel" class="tab-pane" id="profile">
+		<div class="maincontainer">
+		sub content here 1
+		</div>
+		</div>
+		<div role="tabpanel" class="tab-pane" id="messages">
+		<div class="maincontainer">
+		sub content here 2
+		</div>
+		</div>
+		<div role="tabpanel" class="tab-pane" id="settings">
+		<div class="maincontainer">
+		sub content here 3
+		</div>
+		</div>
+	</div>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <footer style=" width: 100%; height: 25px; background: rgba(255,255,255,.4); text-align: center;">[c] <a href="//www.codecademy.com/animalizers/">Animalizers</a> Project Codebits 2014 | <a href="//www.codecademy.com/animalizers/codebits/VIrM4W">Original</a> </footer>
 </body>
