--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -11,6 +11,10 @@
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
     <script>
+	$('#home a').click(function (e) {
+		e.preventDefault()
+		$(this).tab('show')
+	})
 	$('#home a[href="#profile"]').tab('show') // Select tab by name
 	$('#profile a:first').tab('show') // Select first tab
 	$('#messages a:last').tab('show') // Select last tab
