--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -10,8 +10,8 @@
     <h2 style="color: white; text-align: center; margin: 20px 0 0 0; font: bold 28px 'Lucida Sans', sans-serif;">Animalizers</h2>
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
-    <script>
-	$('#home a:first').click(function (e) {
+    <script type="js/bootstrap">
+	$('#home a[href:"#profile"]').click(function (e) {
 		e.preventDefault()
 		$(this).tab('show')
 	})
