--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -11,10 +11,7 @@
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
     <script type="js/bootstrap">
-	$('#home a[href:"#profile"]').click(function (e) {
-		e.preventDefault()
-		$(this).tab('show')
-	})
+	$('#myTabs a[href="#profile"]').tab('show')
     </script>
 	<!-- Nav tabs -->
 	<nav>
