--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -27,17 +27,17 @@
 	</nav
 	<!-- Tab panes -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane maincontainer" id="home">
-		<article>mega content here</article>
+		<div role="tabpanel" class="tab-pane" id="home">
+		<div class="maincontainer">mega content here</div>
 		</div>
-		<div role="tabpanel" class="tab-pane maincontainer" id="profile">
-		<article>sub content here 1</article>
+		<div role="tabpanel" class="tab-pane" id="profile">
+		<div class="maincontainer">sub content here 1</div>
 		</div>
-		<div role="tabpanel" class="tab-pane maincontainer" id="messages">
-		<article>sub content here 2</article>
+		<div role="tabpanel" class="tab-pane" id="messages">
+		<div class="maincontainer">sub content here 2</div>
 		</div>
-		<div role="tabpanel" class="tab-pane maincontainer" id="settings">
-		<article>sub content here 3</article>
+		<div role="tabpanel" class="tab-pane" id="settings">
+		<div class="maincontainer">sub content here 3</div>
 		</div>
 	</div>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
