--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -11,9 +11,10 @@
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
     <script type="js/bootstrap">
-	$('#home a').click(function (e) {
+	$('#myTabs a').click(function (e) {
 	  e.preventDefault()
 	  $(this).tab('show')
+	  $('#myTabs a[href="#profile"]').tab('show')
 	})
     </script>
 	<!-- Nav tabs -->
