--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -10,37 +10,38 @@
     <h2 style="color: white; text-align: center; margin: 20px 0 0 0; font: bold 28px 'Lucida Sans', sans-serif;">Animalizers</h2>
     <p style="text-align: center; color: white; font: normal normal 16px Segoe UI; margin: 0 0 10px">Codebits</p>
     <!-- Navi -->
-    <script type="js/bootstrap">
-	$(document).ready(function(){
-	  $(".nav-tabs a").click(function(){
-        $(this).tab('show');
-	  });
-	});
-    </script>
-	<!-- Nav tabs -->
-	<nav>
-	<ul class="nav nav-tabs" role="tablist">
-		<li role="presentation" class=""><a href="#home" aria-controls="home" role="tab" data-toggle="tab">Home</a></li>
-		<li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Profile</a></li>
-		<li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Messages</a></li>
-		<li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Settings</a></li>
+	<ul class="nav nav-tabs">
+		<li class="active"><a href="#home">Home</a></li>
+		<li><a href="#menu1">Menu 1</a></li>
+		<li><a href="#menu2">Menu 2</a></li>
+		<li><a href="#menu3">Menu 3</a></li>
 	</ul>
-	</nav
-	<!-- Tab panes -->
 	<div class="tab-content">
-		<div role="tabpanel" class="tab-pane" id="home">
-		<div class="maincontainer">mega content here</div>
+		<div id="home" class="tab-pane fade in active maincontainer">
+			<h3 class="headcontainer">HOME</h3>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
-		<div role="tabpanel" class="tab-pane" id="profile">
-		<div class="maincontainer">sub content here 1</div>
+		<div id="menu1" class="tab-pane fade">
+			<h3>Menu 1</h3>
+			<p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 		</div>
-		<div role="tabpanel" class="tab-pane" id="messages">
-		<div class="maincontainer">sub content here 2</div>
+		<div id="menu2" class="tab-pane fade">
+			<h3>Menu 2</h3>
+			<p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
 		</div>
-		<div role="tabpanel" class="tab-pane" id="settings">
-		<div class="maincontainer">sub content here 3</div>
+		<div id="menu3" class="tab-pane fade">
+			<h3>Menu 3</h3>
+			<p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
 		</div>
 	</div>
+</div>
+<script>
+$(document).ready(function(){
+    $(".nav-tabs a").click(function(){
+        $(this).tab('show');
+    });
+});
+</script>
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <footer style=" width: 100%; height: 25px; background: rgba(255,255,255,.4); text-align: center;">[c] <a href="//www.codecademy.com/animalizers/">Animalizers</a> Project Codebits 2014 | <a href="//www.codecademy.com/animalizers/codebits/VIrM4W">Original</a> </footer>
 </body>
