--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <head>
     <title>Alicetrap | Animalizers</title>
 	<meta description="Alicetrap, Alice Bootstrap Landing Page"/>
@@ -18,8 +19,8 @@
 		<li><a href="#menu3">Menu 3</a></li>
 	</ul>
 	<div class="tab-content">
-		<div id="home" class="tab-pane fade in active maincontainer">
-			<h3 class="headcontainer">HOME</h3>
+		<div id="home" class="tab-pane fade in active">
+			<h3>HOME</h3>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 		</div>
 		<div id="menu1" class="tab-pane fade">
@@ -45,3 +46,4 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </body>
+</html>
