--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Alicetrap</title>
-  <p class="metadesc">gal w/ dick</p>
+  <title>Alicetrap.GwD</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -13,7 +12,8 @@
 <body>
 
 <div class="container">
-  <h2 class="h2title">Alicetrap</h2>
+  <h2 class="headtitle">Alicetrap</h2>
+  <p class="metadesc">gal w/ dick</p>
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
     <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
@@ -23,19 +23,19 @@
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active maincontainer">
-      <h3>HOME</h3>
+      <h3 class="head3">HOME</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div id="menu1" class="tab-pane fade maincontainer">
-      <h3>Menu 1</h3>
+      <h3 class="head3">Menu 1</h3>
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div id="menu2" class="tab-pane fade maincontainer">
-      <h3>Menu 2</h3>
+      <h3 class="head3">Menu 2</h3>
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
     </div>
     <div id="menu3" class="tab-pane fade maincontainer">
-      <h3>Menu 3</h3>
+      <h3 class="head3">Menu 3</h3>
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
   </div>
