--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -12,8 +12,8 @@
 <body>
 
 <div class="container">
-  <div class="headtitle">Alicetrap</h2>
-  <div class="metadesc">gal w/ dick</p>
+  <div class="headtitle">Alicetrap</div>
+  <div class="metadesc">gal w/ dick</div>
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
     <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
