--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -13,7 +13,7 @@
 
 <div class="container">
   <div class="headtitle">Alicetrap</div>
-  <div class="metadesc">gal w/ dick</div>
+  <div class="metadesc">gal w/ a dick</div>
   <ul class="nav nav-tabs">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
     <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
@@ -21,21 +21,21 @@
     <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
   </ul>
 
-  <div class="tab-content">
+  <div class="tab-content head3">
     <div id="home" class="tab-pane fade in active maincontainer">
-      <div class="head3">HOME</div>
+      <!--<div class="head3">HOME</div>-->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
     </div>
     <div id="menu1" class="tab-pane fade maincontainer">
-      <div class="head3">Menu 1</div>
+      <!--<div class="head3">Menu 1</div>-->
       <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
     <div id="menu2" class="tab-pane fade maincontainer">
-      <div class="head3">Menu 2</div>
+      <!--<div class="head3">Menu 2</div>-->
       <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
     </div>
     <div id="menu3" class="tab-pane fade maincontainer">
-      <div class="head3">Menu 3</div>
+      <!--<div class="head3">Menu 3</div>-->
       <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
     </div>
   </div>
