--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -14,14 +14,14 @@
 <div class="container">
   <div class="headtitle">Alicetrap</div>
   <div class="metadesc">gal w/ a dick</div>
-  <ul class="nav nav-tabs">
+  <ul class="nav nav-tabs head3">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
     <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
     <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
     <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
   </ul>
 
-  <div class="tab-content head3">
+  <div class="tab-content">
     <div id="home" class="tab-pane fade in active maincontainer">
       <!--<div class="head3">HOME</div>-->
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
