--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -11,9 +11,20 @@
 </head>
 <body>
 
-<div class="container">
-  <div class="headtitle">Alicetrap</div>
-  <div class="metadesc">gal w/ a dick</div>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+	<div class="navbar-header headtitle">
+	<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+	  <span class="sr-only">Toggle navigation</span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+	  <span class="icon-bar"></span>
+    </button>
+    <a class="navbar-brand" href="#">Alicetrap</a>
+	</div>
+  <!--<div class="headtitle">Alicetrap</div>
+  <div class="metadesc">gal w/ a dick</div>-->
+  
   <ul class="nav nav-tabs head3">
     <li class="active"><a data-toggle="tab" href="#home">Home</a></li>
     <li><a data-toggle="tab" href="#menu1">Menu 1</a></li>
