--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -31,6 +31,8 @@
     <li><a data-toggle="tab" href="#menu2">Menu 2</a></li>
     <li><a data-toggle="tab" href="#menu3">Menu 3</a></li>
   </ul>
+  </div>
+</nav>
 
   <div class="tab-content">
     <div id="home" class="tab-pane fade in active maincontainer">
