--- a/codebits/alicetrap.html
+++ b/codebits/alicetrap.html
@@ -75,7 +75,7 @@
     </div>
     <div id="social" class="tab-pane fade">
       <h3>Social</h3>
-      <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+      <p><a href="http://steam.name/animalizers"><img src="../../assets/steam-logo.webp" width="120px" height="120px"></img> /id/animalizers</a></p>
     </div>
     <div id="locoedit" class="tab-pane fade">
       <h3>Loli Cover Edition</h3>
