Add some shortlinks

--- a/colleges/pweb19_05/index.html
+++ b/colleges/pweb19_05/index.html
@@ -18,7 +18,7 @@
 		<li><a href="https://www.google.com" target="_blank">Buka Google</a></li>
 		<li><a href="#" onclick="formOpen()">Konsep desain web TUGAS 05</a></li>
 		<li><a href="http://tif.uad.ac.id" target="_blank">Portal TIF.UAD</a></li>
-		<li><a href="https://github.com/animalizers/colleges/pweb19_05" target="_blank"></a>Lihat Source Code</li>
+		<li><a href="https://github.com/animalizers/animalizers.github.io/tree/master/colleges/pweb19_05" target="_blank"></a>Lihat Source Code</li>
 	</ul>
 	</div>
 
