--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
             //<![CDATA[
             var key = window.location.href.split("go/")[1].replace("/","")
             var urls={
-                'steam':"https://steamcommunity.com/id/animalizers"
-                'tw':"https://twitter.com/animalizers" /* without commas */
+                'steam':"https://steamcommunity.com/id/animalizers",
+                'tw':"https://twitter.com/animalizers", /* without commas */
                 'pweb19_05git':"https://github.com/animalizers/animalizers.github.io/tree/master/colleges/pweb19_05"
             }
             if(key){
